update for day hw is due

--- a/contact.html
+++ b/contact.html
@@ -12,22 +12,22 @@
 				<div class="child"> Andrew Williams</div>
 			</div>
 
-			<div class="rightmargin"><a href="#">Portfolio</a>| <a href="#">Contact</a>| <a href="#">About</a>|</div>
+			<div class="rightmargin navbar"><a href="index.html">About</a><span>  |  </span><a href="portfolio.html">Portfolio</a><span>  |  </span><a href="contact.html">Contact</a></div>
 			
 	</section>
 	<section id="maincontent">
 <div id="box1">
 	 <div>
-	 	<h2>Contact:</h2>	
+	 	<h2>Contact</h2> <br>
 	 </div>
 		  <div>
 		  	<form>
-			    <h4>First name:</h4> 
-			        <input type="text" placeholder="John Doe">
-				<h4>Last name:</h4> 
-					<input type="text" placeholder="Email">
-				<h4>Message</h4>
-				<input class="message" type="text">
+			    <h4>First name:</h4> <br>
+			        <input type="text" placeholder="John Doe"><br>
+				<h4>Last name:</h4> <br>
+					<input type="text" placeholder="Email"><br>
+				<h4>Message</h4><br>
+        			<textarea rows="10" cols="50" placeholder="Enter text here.."></textarea>
 				    
 				<button type="button">Submit</button>
 			</form>
@@ -37,16 +37,16 @@
 
 	         <div id="box2">
 	        	<h3>Connect with me</h3>
-	        	<div>
-	        		<figure><img class="smallimage" src="assets/images/Linked IN.png" alt="Linked In"></figure>
-                    <figure><img class="smallimage" src="assets/images/Linked IN.png" alt=""></figure>
-					<figure><img class="smallimage" src="assets/images/Linked IN.png" alt=""></figure>
+	        	<div id="figurepadding">
+	        		<figure><a href="https://www.linkedin.com/" target="_blank"><img class="smallimage" src="assets/images/Linked IN.png" alt="Linked In"></a></figure>
+                    <figure><a href="https://github.com/"><img class="smallimage" src="assets/images/1496874901_github_square.png" alt="github"></a></figure>
+					<figure><a href="https://stackoverflow.com/"><img class="smallimage" src="assets/images/1496875175_overflow.png" alt="Stack Overflow"></a></figure>
 
 	        	</div>
         </div>
 	</section>
 	<div class="footer">
-	<div class="copyright">Copyright 2016 Andrew Williams</div>
+	<div class="copyright">© Copyright 2016 Andrew Williams</div>
 	</div>
 </body>
 </html>
