--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,67 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Portfolio</title>
+	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="assets/css/style3.css">
 </head>
 <body>
-	
+	<section class="header">
+	 
+			<div class="myName">
+				<div class="child"> Andrew Williams</div>
+			</div>
+
+			<div class="rightmargin navbar"><a href="index.html">About</a><span>  |  </span><a href="portfolio.html">Portfolio</a><span>  |  </span><a href="contact.html">Contact</a></div>
+			
+	</section>
+	<section id="maincontent">
+<div id="box1">
+	 	<div>
+	 		<h2>Portfolio</h2> <br>
+		</div>
+		<div class="level2">
+		  	<div class="subbox">
+		  		<div class="portfolioimage">
+		  			<div class="bottomposition">Awesome app</div>
+		  		</div>
+		  		<div class="portfolioimage">
+		  			<div class="bottomposition">Awesome app</div>
+		  		</div>
+		  	</div>
+		  	<br>
+		  	<div class="subbox">
+		  		<div class="portfolioimage">
+		  			<div class="bottomposition">Awesome app</div>
+		  		</div>
+		  		<div class="portfolioimage">
+		  			<div class="bottomposition">Awesome app</div>
+		  		</div>
+		  	</div>
+		  	<br> class="bottomposition"
+			<div class="subbox">
+				<div class="portfolioimage">
+					<div class="bottomposition">Awesome app</div>
+				</div>
+				<div class="portfolioimage">
+					<div class="bottomposition">Awesome app</div>
+				</div>
+			</div>
+		</div>	
+</div>
+
+	         <div id="box2">
+	        	<h3>Connect with me</h3>
+	        	<div id="figurepadding">
+	        		<figure><a href="https://www.linkedin.com/" target="_blank"><img class="smallimage" src="assets/images/Linked IN.png" alt="Linked In"></a></figure>
+                    <figure><a href="https://github.com/"><img class="smallimage" src="assets/images/1496874901_github_square.png" alt="github"></a></figure>
+					<figure><a href="https://stackoverflow.com/"><img class="smallimage" src="assets/images/1496875175_overflow.png" alt="Stack Overflow"></a></figure>
+
+	        	</div>
+        </div>
+	</section>
+	<div class="footer">
+	<div class="copyright">© Copyright 2016 Andrew Williams</div>
+	</div>
 </body>
 </html>
